# OpenCLI

./: .env.example  .gitignore  .npmignore  .release-it.json  AGENTS.md  LICENSE  NOTICE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.codex/: config.toml
.qwen/: settings.json
docs/: nginx-subpath-template.conf  plan-chat-minimax-ui.md
mcp/rag/: mcp-client-config.example.json  pyproject.toml  run-server.sh
mcp/rag/src/rag_mcp/: __init__.py  config.py  server.py  tools.py
mcp/rag/src/rag_mcp/loaders/: __init__.py  docx.py  pdf.py  pptx.py  text.py  xlsx.py
mcp/rag/src/rag_mcp/rag/: embeddings.py  ingest.py  policy.py  retrieve.py
mcp/rag/tests/: _helpers.py  test_config.py  test_embeddings.py  test_loaders.py  test_path_policy.py  test_status.py
public/: api-docs.html  manifest.json  sw.js
redirect-package/: bin.js  index.js  package.json
server/: browser-use-mcp.ts  claude-sdk.js  cli.js  index.js  load-env.js  minimax-proxy.js  voice-proxy.js
server/routes/: agent.js  commands.js  git.js  settings.js
server/shared/: claude-settings.ts  image-attachments.ts  mmx-config.ts  provider-abort.ts  types.ts  utils.ts
server/utils/: commandParser.js  runtime-paths.js
server/whisper/: README.md  index.js  setup.sh  whisper-runner.js  whisper.routes.js
src/: App.tsx
src/constants/: branding.ts
src/contexts/: WebSocketContext.tsx
src/hooks/: useProjectsState.ts  usePwaInstall.ts  useTtsPlayer.ts  useVersionCheck.ts  useVoiceConfig.ts  useVoiceRecorder.ts  useWebPush.ts
src/i18n/: config.js  (+1 more)
(+309 files in other folders)
