[project]
name = "rag-mcp"
version = "0.1.0"
description = "Retrieval-only MCP server for office document RAG with Ollama embeddings"
requires-python = ">=3.12"
dependencies = [
    "mcp[fastmcp]>=1.6.0",
    "chromadb>=0.5",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "langchain-text-splitters>=0.3",
    "httpx>=0.27",
]

[project.scripts]
rag-mcp = "rag_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_mcp"]
